# json2csv

./: .gitignore  README.md  index.html  package-lock.json  package.json  simple.html  test-data.json
.claude/: settings.local.json
.github/workflows/: release.yml
css/: styles.css
js/: app.js  csvConverter.js  fileHandler.js  jsonParser.js  ui.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
