[package]
name = "json2csv"
version = "1.0.0"
description = "JSON to CSV/Excel converter"
authors = ["leecaiy04"]
license = "MIT"
repository = "https://github.com/leecaiy04/json2csv"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
